# IN4200

./: CMakeLists.txt  README.md
HPC_BOOK/chap1/p1/: integrate.c
e1/: 3d_array.c  matrix_loop.c  verify_limit.c
e2/: temp-data.txt
e3/: quicksort.c
s1/e1/: max_min_number_in_array.c  verify_limit.c
s1/e2/: temperatures.c
s1/e3/: test
s2/e1/: test  textfile.txt  txt_bin_performance.c
s2/e2/: copy_array.c  copy_array_2.c
s2/e3/: 3d_numerical_calculation.c  README.md
s4/e1/: memory_bandwidth.c
s4/e2/: memory_badwidth_strided.c
